@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class APIGateway {
}

class TableTypeController {
    - _tableTypeRepositories: ITableTypeRepositories
    + CreateTableType(AddEditTypeRequestDTO createTableType): Task<IActionResult>
}

interface ITableTypeRepositories<<interface>> {
    + CreateTableType(AddEditTypeRequestDTO createTableType): Task<GetTableTypeResponseDTO>
}

class TableTypeRepositories {
    - _tableTypeDao: TableTypeDAO
    + CreateTableType(AddEditTypeRequestDTO createTableType): Task<GetTableTypeResponseDTO>
}

class TableTypeDAO {
    - _client.From<TableType> : ISupabaseTable<TableType>
    + CreateTableType(AddEditTypeRequestDTO createTableType): Task<GetTableTypeResponseDTO>
}
class TableType {
    + Id: Guid
    + Name: string
    + Description: string
    + PriceByHour: decimal
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway -- TableTypeController
TableTypeController -- ITableTypeRepositories
ITableTypeRepositories <|-- TableTypeRepositories
TableTypeRepositories "1"--"1..*" TableTypeDAO
TableTypeDAO "1"--"0..*" TableType
@enduml
